<resources>
    <string name="app_name">Hisaab Kitaab</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Enter Your Name</string>
    <string name="prompt_mobile">Enter Your Mobile Number</string>
    <string name="add_user">ADD USER</string>
    <string name="pay_amount">PAY NOW</string>
    <string name="update_amount">ADD AMOUNT</string>
    <string name="shared_by">shared by</string>
    <string name="prompt_address">Enter Email Address</string>
    <string name="prompt_remark">Enter Your Remark</string>
    <string name="prompt_amount">Enter Amount</string>
    <string name="prompt_payment">To add more Customers get more Reward points 100 points = 10 users OR Pay 50 Rs to unlock 10 more Users</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="added_user">User Added Successfully</string>
    <string name="valid_name">Please Enter Your Name</string>
    <string name="valid_mobile">Please Enter Your 10 Digit Mobile Number</string>
    <string name="valid_address">Please give your correct Email address</string>
    <string name="valid_amount">Please Enter Amount</string>
    <string name="validate_remark">Please Enter Your Remark</string>
    <string name="default_notification_channel_id"></string>
    <string name="start_adding">No Customer. Start adding at the top!</string>
    <string name="signing_in">Signing in…</string>
    <string name="anonymous_auth_failed_msg">
        Anonymous authentication failed, various components of the demo will not work.
        Make sure your device is online and that Anonymous Auth is configured in your Firebase project
        (https://console.firebase.google.com/project/_/authentication/providers)
    </string>
    <string name="rational_image_perm">This will read an image from local storage to upload to Cloud Storage.</string>
    <string name="title_activity_user_detail">Details</string>

</resources>
